Add stylings to update the post

--- a/views/title.ejs
+++ b/views/title.ejs
@@ -21,8 +21,8 @@
       
         <div class="sidebar">
           <p><a href="index.ejs"></a>Home</p>
-          <p><a href="profile.ejs"></a>Profile</p>
-          <p><a href="settings.ejs"></a>Settings</p>
+          <p><a href=""></a>Profile</p>
+          <p><a href=""></a>Settings</p>
         </div>
       </div>
 
