--- a/views/view.ejs
+++ b/views/view.ejs
@@ -23,8 +23,8 @@
       
         <div class="sidebar">
             <a href="/"><p>Home</p></a>
-          <p><a href="profile.ejs">Profile</p></a>
-          <p><a href="settings.ejs">Settings</p></a>
+          <p><a href="">Profile</p></a>
+          <p><a href="">Settings</p></a>
         </div>
       </div>
 
