--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,8 +32,8 @@
     
       <div class="sidebar">
         <p><a href="/">Home</p></a>
-        <p><a href="profile.ejs">Profile</p></a>
-        <p><a href="settings.ejs">Settings</p></a>
+        <p><a href="">Profile</p></a>
+        <p><a href="">Settings</p></a>
       </div>
     </div>
       <div class="Main">
