--- a/views/update.ejs
+++ b/views/update.ejs
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Add your head content here -->
+  <<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <%- include('header.ejs') %>
+  <div id="sidenav">
+    <div id="post">
+      <a href="/"><button type="button" class="btn btn-danger mx-5 my-3">Go Back</button> </a>    
+     </div>
+  
+    <div class="sidebar">
+      <p><a href="/">Home</p></a>
+      <p><a href="">Profile</p></a>
+      <p><a href="">Settings</p></a>
+    </div>
+  </div>
 
   <div class="Main">
     <h2>Modify Post</h2>
-    <form method="POST" action="/update/<%= selectedPost.id %>?_method=PATCH" style="display: flex;">
+    <form class="update-container" method="POST" action="/update/<%= selectedPost.id %>?_method=PATCH" style="display: flex;">
       <label for="title">Title:</label>
       <input type="text" id="title" name="title" value="<%= selectedPost.title %>" required>
 
@@ -16,7 +29,7 @@
       <textarea id="description" name="description" required><%= selectedPost.description %></textarea>
 
       <label for="blog-content">Content:</label>
-      <textarea id="blog-content" name="blog-content" required><%= selectedPost.content %></textarea>
+      <textarea id="blog-content" name="blog-content" rows="10" required><%= selectedPost.content %></textarea>
 
       <button type="submit" class="btn btn-primary">Update Post</button>
     </form>
